# dnad

./: CMakeLists.txt  README.md  fpm.toml  meson.build  meson_options.txt
src/: dnad.f90  dnad_nderiv.f90.in
test/: unittests.f90
